--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.8.1
 Django==5.1.4
+django-decouple==2.1
+django-filter==24.3
+django-redis==5.4.0
 djangorestframework==3.15.2
 Faker==33.1.0
+mysqlclient==2.2.6
 python-dateutil==2.9.0.post0
+redis==5.2.1
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
